<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>it.greenvulcano.gvesb</groupId>
	<artifactId>gvengine</artifactId>
	<version>4.1.0</version>
	<packaging>pom</packaging>

	<name>GreenVulcano Engine</name>

	<organization>
		<name>GreenVulcano Technologies</name>
		<url>http://www.greenvulcanotechnologies.com</url>
	</organization>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven-compiler-plugin.version>2.5.1</maven-compiler-plugin.version>
		<jacoco-maven-plugin.version>0.7.7.201606060606</jacoco-maven-plugin.version>
		<maven-bundle-plugin.version>3.0.1</maven-bundle-plugin.version>

		<version.osgi>5.0.0</version.osgi>
		<version.slf4j>1.6.1</version.slf4j>
		<version.junit>4.11</version.junit>
		<version.json>20190722</version.json>
		<version.karaf>4.2.6</version.karaf>
		<version.jackson>2.10.0.pr1</version.jackson>

		<cloud.nexus.content>http://mvn.greenvulcano.com/nexus/content</cloud.nexus.content>
	</properties>

	<repositories>
		<repository>
			<id>nexus-cloud</id>
			<name>Cloud Nexus instance - PUBLIC</name>
			<url>${cloud.nexus.content}/groups/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>central</id>
			<url>http://repo1.maven.org/maven2</url>
		</repository>
		<repository>
			<id>java-net2</id>
			<name>Java.net Maven Repository</name>
			<url>http://download.java.net/maven/2</url>
		</repository>
		<repository>
			<id>repository.jboss.com</id>
			<name>Jboss Repository for Maven</name>
			<url>http://repository.jboss.org/nexus/content/repositories/public</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>nexus-cloud</id>
			<name>Cloud Nexus instance - RELEASES </name>
			<url>${cloud.nexus.content}</url>
		</repository>
		<snapshotRepository>
			<id>nexus-cloud</id>
			<name>Cloud Nexus instance - SNAPSHOTS</name>
			<url>${cloud.nexus.content}</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.platform</groupId>
				<artifactId>jakarta.jakartaee-bom</artifactId>
				<version>8.0.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.core</artifactId>
			<version>${version.osgi}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.osgi</groupId>
			<artifactId>org.osgi.compendium</artifactId>
			<version>${version.osgi}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${version.slf4j}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20190722</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${version.jackson}</version>
			<scope>provided</scope>
		</dependency>

		<!-- *************** TEST *************** -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
			<version>${version.junit}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.16</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.16</version>
				<executions>
					<execution>
						<id>default-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<modules>
		<module>gvapi</module>
		<module>gvbase</module>
		<module>gvcommands</module>
		<module>gvcore</module>
		<module>gvconsole</module>
		<module>gvdte</module>
		<module>gviam</module>
		<module>gviam-mongodb</module>
		<module>gviam-db</module>
		<module>gviamx</module>
		<module>gviamx-mongodb</module>
		<module>gviamx-auth-fb</module>
		<module>gviam-karaf</module>
		<module>gvmonitoring</module>
		<module>gvscheduler</module>
		<module>gvstatistics</module>
		<module>gvvcl</module>
		<module>gvvcl-internal</module>
		<module>features</module>
		<module>gvcluster-manager</module>
	</modules>

</project>
